--- a/style.css
+++ b/style.css
@@ -55,18 +55,21 @@ body {
     text-align: center;
     font-weight: 500;
   }
-}
-
-img {
-  width: 250px;
-  height: 200px;
-  padding: 5px;
-  border-radius: 5px;
-  margin-bottom: 10px;
-  &:hover {
-    transform: scale(1.1);
+  & img {
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+    box-shadow: rgba(255, 255, 255, 0.5) 0px 5px 15px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
+
+
 
 .search-box {
   display: flex;
