--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ body {
   align-items: center;
   flex-direction: column;
   background: #413d3d;
+  & h1 {
+    color: #fff;
+    font-size: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
 }
 
 .container {
